Delay running amarokurls passed on startup until the entire app has had a chance to initialize itself. This fixes a crash.

BUG: 231626